--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8080
 # DataSource Config
 spring:
   application:
@@ -9,16 +11,27 @@ spring:
     password: 12345678
   session:
     timeout: 86400
-server:
-  port: 8080
+  servlet:
+    multipart:
+      max-file-size: 5MB  # 单个文件最大限制
+      max-request-size: 10MB # 单次请求最大限制
+# mybatis-plus 配置
 mybatis-plus:
   global-config:
     db-config:
       logic-delete-field: isDelete
       logic-delete-value: 1
       logic-not-delete-value: 0
+# aliyun OSS 配置
 aliyun:
   oss:
     endpoint: https://oss-cn-beijing.aliyuncs.com
     bucketName: java-web-frank
     region: cn-beijing
+# 上传头像的配置
+avatar:
+  upload:
+    max-width: 800 # 最大宽度
+    max-height: 800 # 最大高度
+    quality: 0.7 # 压缩质量（0-1）
+    allowed-types: jpg,jpeg,png # 允许的文件类型
