添加Excel文件批量导入用户并校验用户信息

--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,13 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <scope>compile</scope>
         </dependency>
+
+        <!-- EasyExcel核心依赖 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 
     <repositories>
